{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 150,
  "lineage": "43cbcd75-db19-fe17-b66b-840aa85853ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "hashi_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b8b77aa1248f223f",
            "arn": "arn:aws:ec2:us-west-1:058264261025:elastic-ip/eipalloc-0b8b77aa1248f223f",
            "associate_with_private_ip": "10.0.1.116",
            "association_id": "eipassoc-02ffa6c00454d5e0f",
            "domain": "vpc",
            "id": "eipalloc-0b8b77aa1248f223f",
            "instance": "i-09c5f3c75ea548590",
            "network_border_group": "us-west-1",
            "network_interface": "eni-068d889eb53327638",
            "private_dns": "ip-10-0-1-116.us-west-1.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-52-8-132-188.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.132.188",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.hashi_ec2",
            "aws_internet_gateway.hashi_IGW",
            "aws_network_interface.public_net_interface",
            "aws_security_group.hashi_SG",
            "aws_subnet.hashi_subnet1",
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "hashi_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08012c0a9ee8e21c4",
            "arn": "arn:aws:ec2:us-west-1:058264261025:instance/i-09c5f3c75ea548590",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c5f3c75ea548590",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_hashiDemo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-068d889eb53327638"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-068d889eb53327638",
            "private_dns": "ip-10-0-1-116.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.116",
            "public_ip": "52.8.132.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-054c2e85a70dc0390",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be67b0be3ebea247",
            "tags": {
              "Name": "hashi_ec2"
            },
            "tags_all": {
              "Name": "hashi_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074a0fe90467ffb63"
            ]
          },
          "dependencies": [
            "aws_network_interface.public_net_interface",
            "aws_security_group.hashi_SG",
            "aws_subnet.hashi_subnet1",
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hashi_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264261025:internet-gateway/igw-00a91aa5b76e6b5b9",
            "id": "igw-00a91aa5b76e6b5b9",
            "owner_id": "058264261025",
            "tags": {
              "name": "my_IGW"
            },
            "tags_all": {
              "name": "my_IGW"
            },
            "vpc_id": "vpc-0a2d504b61a95dae0"
          },
          "dependencies": [
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264261025:network-interface/eni-068d889eb53327638",
            "attachment": [
              {
                "attachment_id": "eni-attach-090974537507423d6",
                "device_index": 0,
                "instance": "i-09c5f3c75ea548590"
              }
            ],
            "id": "eni-068d889eb53327638",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:ff:ef:a8:e3:85",
            "owner_id": "058264261025",
            "private_ip": "10.0.1.116",
            "private_ip_list": [
              "10.0.1.116"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.116"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-074a0fe90467ffb63"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be67b0be3ebea247"
          },
          "dependencies": [
            "aws_security_group.hashi_SG",
            "aws_subnet.hashi_subnet1",
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hashi_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a91aa5b76e6b5b9",
            "id": "r-rtb-071a560aa2aa7eed11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-071a560aa2aa7eed1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hashi_IGW",
            "aws_route_table.hashi_route_table",
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hashi_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264261025:route-table/rtb-071a560aa2aa7eed1",
            "id": "rtb-071a560aa2aa7eed1",
            "owner_id": "058264261025",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a91aa5b76e6b5b9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "my_route_table"
            },
            "tags_all": {
              "name": "my_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2d504b61a95dae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hashi_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024458b1ccce43d05",
            "route_table_id": "rtb-071a560aa2aa7eed1",
            "subnet_id": "subnet-0be67b0be3ebea247"
          },
          "dependencies": [
            "aws_route_table.hashi_route_table",
            "aws_subnet.hashi_subnet1",
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hashi_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264261025:security-group/sg-074a0fe90467ffb63",
            "description": "security group for the EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074a0fe90467ffb63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "http traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "https traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.0.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec_group",
            "name_prefix": "",
            "owner_id": "058264261025",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "allow_web"
            },
            "tags_all": {
              "name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2d504b61a95dae0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hashi_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264261025:subnet/subnet-0be67b0be3ebea247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be67b0be3ebea247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264261025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "my_subnet"
            },
            "tags_all": {
              "name": "my_subnet"
            },
            "vpc_id": "vpc-0a2d504b61a95dae0"
          },
          "dependencies": [
            "aws_vpc.hashi_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hashi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:058264261025:vpc/vpc-0a2d504b61a95dae0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0564b8dacf2340cfc",
            "default_route_table_id": "rtb-0b711dbd9522e9d2f",
            "default_security_group_id": "sg-08e867092cdfed9d3",
            "dhcp_options_id": "dopt-0da4e9701dc063791",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2d504b61a95dae0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b711dbd9522e9d2f",
            "owner_id": "058264261025",
            "tags": {
              "name": "my_vpc"
            },
            "tags_all": {
              "name": "my_vpc"
            }
          }
        }
      ]
    }
  ]
}